force-app/main/default/objects/object125__c/object125__c.object-meta.xml
<CustomObject>
    <label>Object125</label>
    <nameField>
        <label>NameField</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects125</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>