force-app/main/default/objects/object125__c/fields/testfield106__c.field-meta.xml
<CustomField>
    <fullName>testfield106__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test</description>
    <label>testfield106</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>object125_testfield106s</relationshipLabel>
    <relationshipName>object125_testfield106s</relationshipName>
    <type>Lookup</type>
</CustomField>