force-app/main/default/objects/object125__c/fields/testfield46__c.field-meta.xml
<CustomField>
    <fullName>testfield46__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test</description>
    <label>testfield46</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>object125_testfield46s</relationshipLabel>
    <relationshipName>object125_testfield46s</relationshipName>
    <type>Lookup</type>
</CustomField>